KASS Notebook Compliance Update: Add standardized Title & Overview sections with badges, learning objectives, and key methods tables to all 6 notebooks; Add GitHub Issue templates, PR templates, Code of Conduct, and Security Policy; Add CONTRIBUTING.md compliance directive and workflow documentation

--- a/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
+++ b/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
@@ -2,6 +2,119 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ff889df4",
+   "metadata": {},
+   "source": [
+    "# Labor Market Intelligence Analysis\n",
+    "\n",
+    "## KASS Notebook 07 | Applied Econometrics Series\n",
+    "\n",
+    "[![KRL Suite](https://img.shields.io/badge/KRL%20Suite-v2.0-blue)](https://kr-labs.io)\n",
+    "[![Tier](https://img.shields.io/badge/Tier-Community-green)](https://kr-labs.io/pricing)\n",
+    "[![Data](https://img.shields.io/badge/Data-BLS%20%2B%20FRED-orange)](https://fred.stlouisfed.org)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Overview\n",
+    "\n",
+    "This notebook demonstrates **comprehensive labor market intelligence** using descriptive econometric methods and real-time data from the Bureau of Labor Statistics (BLS) and Federal Reserve Economic Data (FRED).\n",
+    "\n",
+    "### Learning Objectives\n",
+    "\n",
+    "After completing this notebook, you will be able to:\n",
+    "\n",
+    "1.  **Data Integration** - Combine employment, wage, and macroeconomic indicators from BLS and FRED APIs\n",
+    "2.  **Industry Analysis** - Apply Location Quotient and Shift-Share decomposition to identify regional specializations\n",
+    "3.  **Time Series Diagnostics** - Use STL decomposition to detect anomalies in labor market trends\n",
+    "4.  **Correlation Analysis** - Examine relationships between labor market indicators and economic conditions\n",
+    "5.  **Dashboard Creation** - Build executive-ready visualizations of labor market intelligence\n",
+    "\n",
+    "### Key Methods\n",
+    "\n",
+    "| Method | Purpose | KRL Component |\n",
+    "|--------|---------|---------------|\n",
+    "| Location Quotient | Regional industry specialization | `LocationQuotientModel` |\n",
+    "| Shift-Share Analysis | Decompose employment change | `ShiftShareModel` |\n",
+    "| STL Decomposition | Trend/seasonal/residual | `STLAnomalyModel` |\n",
+    "| Correlation Analysis | Cross-indicator relationships | `scipy.stats` |\n",
+    "\n",
+    "### Prerequisites\n",
+    "\n",
+    "- Python 3.9+\n",
+    "- KRL Suite Community Tier\n",
+    "- FRED API key (free registration at https://fred.stlouisfed.org/docs/api/api_key.html)\n",
+    "- BLS API key (optional, for higher rate limits)\n",
+    "\n",
+    "### Estimated Time: 20-25 minutes\n",
+    "\n",
+    "---\n",
+    "\n",
+    "⚠️ **Analytical Framework Note:** This notebook performs **descriptive analytics**, not causal inference. Correlations and patterns identified should be interpreted as associations, not causal effects. See the Limitations section for proper interpretation guidance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a846b33d",
+   "metadata": {},
+   "source": [
+    "## Motivation\n",
+    "\n",
+    "### Why Labor Market Intelligence Matters\n",
+    "\n",
+    "Labor market dynamics are fundamental to understanding economic health, policy effectiveness, and workforce development needs. Policymakers, researchers, and business leaders require comprehensive intelligence that goes beyond simple unemployment statistics:\n",
+    "\n",
+    "**1. Economic Monitoring**\n",
+    "- Track business cycle dynamics through employment and wage trends\n",
+    "- Identify early warning signs of labor market stress\n",
+    "- Monitor recovery patterns following economic shocks\n",
+    "\n",
+    "**2. Regional Economic Development**\n",
+    "- Assess industry specialization and competitive advantage\n",
+    "- Identify skills gaps and training priorities\n",
+    "- Support evidence-based workforce investment decisions\n",
+    "\n",
+    "**3. Policy Evaluation Context**\n",
+    "- Establish baseline labor market conditions for policy analysis\n",
+    "- Track leading and lagging indicators for impact timing\n",
+    "- Monitor distributional effects across sectors and regions\n",
+    "\n",
+    "### Analytical Framework\n",
+    "\n",
+    "This notebook implements a **descriptive analytics pipeline** for labor market intelligence:\n",
+    "\n",
+    "```\n",
+    "Data Collection → Indicator Construction → Pattern Detection → Visualization\n",
+    "     ↓                    ↓                       ↓                ↓\n",
+    "  BLS/FRED          LQ, Shift-Share        STL Anomaly        Dashboards\n",
+    "```\n",
+    "\n",
+    "**Important:** This is *descriptive*, not *causal* analysis. We identify patterns and correlations that inform decision-making but do not establish cause-and-effect relationships.\n",
+    "\n",
+    "### Policy Applications\n",
+    "\n",
+    "| Application | Descriptive Intelligence | Causal Analysis Needed |\n",
+    "|-------------|-------------------------|----------------------|\n",
+    "| Economic monitoring | ✅ This notebook | ❌ Not required |\n",
+    "| Training needs assessment | ✅ Partial (skill gaps) | ⚠️ For ROI claims |\n",
+    "| Regional planning | ✅ Industry analysis | ⚠️ For intervention effects |\n",
+    "| Policy evaluation | ⚠️ Context only | ✅ See causal inference notebooks |\n",
+    "\n",
+    "### Data Sources\n",
+    "\n",
+    "| Source | Variables | Update Frequency | Access |\n",
+    "|--------|-----------|------------------|--------|\n",
+    "| BLS CES | Employment by industry | Monthly | Free API |\n",
+    "| BLS QCEW | Wages, establishment counts | Quarterly | Free API |\n",
+    "| BLS OES | Occupation-level wages | Annual | Free API |\n",
+    "| FRED | GDP, CPI, macro indicators | Varies | Free API |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "*For causal analysis of workforce interventions, see [22-workforce-development-roi.ipynb](22-workforce-development-roi.ipynb).*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "39835bd4",
    "metadata": {},
    "source": [
@@ -1166,6 +1279,154 @@
     "print(f\"   2. Expand apprenticeship and credential programs\")\n",
     "print(f\"   3. Target tech talent pipeline in deficit areas\")\n",
     "print(f\"   4. Support middle-skill wage growth through training\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91c0550b",
+   "metadata": {},
+   "source": [
+    "## Limitations & Interpretation\n",
+    "\n",
+    "### What This Analysis DOES Show\n",
+    "\n",
+    "1. **Current Labor Market Conditions**\n",
+    "   - Employment levels and trends across industries\n",
+    "   - Wage distributions and changes over time\n",
+    "   - Unemployment rate dynamics and seasonality\n",
+    "\n",
+    "2. **Regional Industry Patterns**\n",
+    "   - Location quotients identify relative specialization\n",
+    "   - Shift-share decomposes growth into national/industry/regional components\n",
+    "   - Skill distribution across metro areas\n",
+    "\n",
+    "3. **Correlational Relationships**\n",
+    "   - Association between unemployment and macroeconomic indicators\n",
+    "   - Co-movement of wages and cost-of-living measures\n",
+    "   - Seasonal patterns in employment\n",
+    "\n",
+    "4. **Anomaly Detection**\n",
+    "   - Unusual deviations from expected seasonal patterns\n",
+    "   - Structural breaks in employment trends\n",
+    "   - Early warning signals of labor market stress\n",
+    "\n",
+    "### What This Analysis DOES NOT Show\n",
+    "\n",
+    "1. **Causal Effects**\n",
+    "   - Correlations ≠ causation\n",
+    "   - Cannot determine if policy X *caused* employment change Y\n",
+    "   - Confounding factors may explain observed associations\n",
+    "\n",
+    "2. **Counterfactual Outcomes**\n",
+    "   - What would have happened without intervention\n",
+    "   - Whether alternative policies would perform better\n",
+    "   - Optimal policy design\n",
+    "\n",
+    "3. **Individual-Level Heterogeneity**\n",
+    "   - Aggregate statistics may mask important subgroup variation\n",
+    "   - Average wage trends don't reflect distributional changes\n",
+    "   - Metro-level analysis misses neighborhood effects\n",
+    "\n",
+    "4. **Structural Interpretation**\n",
+    "   - Why industries specialize in certain regions\n",
+    "   - Whether specialization is beneficial or risky\n",
+    "   - Causal drivers of regional competitiveness\n",
+    "\n",
+    "### Common Misinterpretations to AVOID\n",
+    "\n",
+    "| ❌ Incorrect Interpretation | ✅ Correct Interpretation |\n",
+    "|----------------------------|--------------------------|\n",
+    "| \"Unemployment dropped *because* GDP grew\" | \"Unemployment and GDP are negatively correlated\" |\n",
+    "| \"Training programs work—skills improved\" | \"Regions with training programs have higher skills on average\" |\n",
+    "| \"This metro *should* invest in tech\" | \"This metro has lower tech specialization than peers\" |\n",
+    "| \"The policy caused the recovery\" | \"Recovery coincided with policy implementation\" |\n",
+    "\n",
+    "### Appropriate Uses of This Analysis\n",
+    "\n",
+    "**✅ Appropriate:**\n",
+    "- Monitoring economic conditions in real-time\n",
+    "- Identifying regions for further investigation\n",
+    "- Contextualizing causal studies\n",
+    "- Generating hypotheses for rigorous testing\n",
+    "- Benchmarking against peers\n",
+    "\n",
+    "**❌ Not Appropriate:**\n",
+    "- Claiming policy caused observed outcomes\n",
+    "- Recommending specific interventions\n",
+    "- Predicting effects of untested policies\n",
+    "- Cost-benefit analysis (requires causal estimates)\n",
+    "\n",
+    "### Reproducibility Notes\n",
+    "\n",
+    "**Random Seed:** Not applicable (real data; no stochastic elements)\n",
+    "\n",
+    "**Data Versioning:** FRED and BLS data are vintaged; results may differ if re-run with revised data. Consider saving raw data snapshots for full reproducibility.\n",
+    "\n",
+    "**API Rate Limits:** BLS and FRED have rate limits. For production use, implement caching and backoff strategies.\n",
+    "\n",
+    "### Recommended Next Steps\n",
+    "\n",
+    "1. **For Causal Questions:** Use causal inference methods (see notebooks 14, 15, 22)\n",
+    "2. **For Prediction:** Develop time series forecasting models\n",
+    "3. **For Deep Dives:** Disaggregate to county or tract level\n",
+    "4. **For Comparison:** Extend to additional metros or time periods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9bb2eb3",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "### Labor Market Analysis Methods\n",
+    "\n",
+    "1. **Bartik, T. J. (1991).** Who Benefits from State and Local Economic Development Policies? W.E. Upjohn Institute.\n",
+    "   - Foundation for shift-share analysis and local labor demand estimation\n",
+    "\n",
+    "2. **Moretti, E. (2010).** Local Multipliers. *American Economic Review: Papers & Proceedings*, 100(2), 373-377.\n",
+    "   - Employment multipliers across sectors; tradable vs. non-tradable\n",
+    "\n",
+    "3. **Autor, D. H., Dorn, D., & Hanson, G. H. (2013).** The China Syndrome: Local Labor Market Effects of Import Competition. *American Economic Review*, 103(6), 2121-2168.\n",
+    "   - Shift-share instrumental variables approach\n",
+    "\n",
+    "4. **Katz, L. F., & Murphy, K. M. (1992).** Changes in Relative Wages, 1963–1987: Supply and Demand Factors. *Quarterly Journal of Economics*, 107(1), 35-78.\n",
+    "   - Labor supply and demand decomposition framework\n",
+    "\n",
+    "5. **Cleveland, R. B., Cleveland, W. S., McRae, J. E., & Terpenning, I. (1990).** STL: A Seasonal-Trend Decomposition Procedure Based on Loess. *Journal of Official Statistics*, 6(1), 3-73.\n",
+    "   - STL decomposition methodology for time series\n",
+    "\n",
+    "### Data Sources and Documentation\n",
+    "\n",
+    "6. **Bureau of Labor Statistics.** Current Employment Statistics (CES).\n",
+    "   - Source: https://www.bls.gov/ces/\n",
+    "   - Monthly establishment-level employment by industry\n",
+    "\n",
+    "7. **Bureau of Labor Statistics.** Quarterly Census of Employment and Wages (QCEW).\n",
+    "   - Source: https://www.bls.gov/qcew/\n",
+    "   - Comprehensive employment and wage data from administrative records\n",
+    "\n",
+    "8. **Federal Reserve Economic Data (FRED).**\n",
+    "   - Source: https://fred.stlouisfed.org/\n",
+    "   - Macroeconomic indicators including GDP, CPI, unemployment\n",
+    "\n",
+    "9. **O*NET Resource Center.**\n",
+    "   - Source: https://www.onetcenter.org/\n",
+    "   - Occupational characteristics, automation exposure metrics\n",
+    "\n",
+    "### Regional Economics\n",
+    "\n",
+    "10. **Glaeser, E. L., & Gottlieb, J. D. (2009).** The Wealth of Cities: Agglomeration Economies and Spatial Equilibrium in the United States. *Journal of Economic Literature*, 47(4), 983-1028.\n",
+    "    - Spatial equilibrium and regional wage differentials\n",
+    "\n",
+    "11. **Autor, D. H. (2019).** Work of the Past, Work of the Future. *AEA Papers and Proceedings*, 109, 1-32.\n",
+    "    - Labor market polarization and geographic divergence\n",
+    "\n",
+    "### KRL Suite Documentation\n",
+    "\n",
+    "12. **KRL Suite v2.0 Documentation.**\n",
+    "    - Source: Internal documentation\n",
+    "    - `BLSBasicConnector`, `FREDBasicConnector`, `LocationQuotientModel`, `ShiftShareModel`, `STLAnomalyModel` APIs"
    ]
   },
   {
