Audit remediation: Applied-econometrics notebooks (07, 20, 22)
NB07 (C+ → B+):
- Replace demo data fallbacks with explicit RuntimeError requiring API credentials
- Add methodology justification for index construction weights (30/25/25/20)
- Add threshold sensitivity analysis for 0.4 critical gap threshold
- References section already present (12+ citations)

NB22 (B+ → A-):
- Add prominent METHODOLOGICAL DEMONSTRATION warning at top
- Implement Cinelli-Hazlett omitted variable bias bounds (sensemakr approach)
- Replace Pro Tier marketing with neutral sensitivity analysis section
- Add cost-benefit parameter citations (OMB A-4, JobCorps, Card et al.)
- Remove incorrect A+ (99/100) self-assessment certificate

NB20 (B+ → A):
- Add hybrid data structure disclosure (real FRED + simulated OZ)
- Add CRITICAL LIMITATION section on county-level aggregation
- Document pre-programmed home value effect (8% artifact)
- County vs tract level analysis warning

Addresses KASS audit findings per CONTRIBUTING.md compliance.

--- a/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
+++ b/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
@@ -9,9 +9,7 @@
     "\n",
     "## KASS Notebook 07 | Applied Econometrics Series\n",
     "\n",
-    "[![KRL Suite](https://img.shields.io/badge/KRL%20Suite-v2.0-blue)](https://kr-labs.io)\n",
-    "[![Tier](https://img.shields.io/badge/Tier-Community-green)](https://kr-labs.io/pricing)\n",
-    "[![Data](https://img.shields.io/badge/Data-BLS%20%2B%20FRED-orange)](https://fred.stlouisfed.org)\n",
+    "**KRL Suite v2.0** | **Tier: Community** | **Data: BLS + FRED**\n",
     "\n",
     "---\n",
     "\n",
