security(notebooks): Remove private paths from public notebooks
Replaced hardcoded development paths with public-friendly paths:
- ~/Documents/GitHub/KRL/Private IP/ → ~/.krl/krl-suite/
- krl-tutorials/.env → ~/.krl/.env

This allows users to install KRL Suite in their home directory
without exposing internal development structure.

Notebooks updated: NB07, NB11, NB14, NB15, NB20, NB22

--- a/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
+++ b/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
@@ -182,7 +182,7 @@
     "import importlib.util\n",
     "\n",
     "# Add KRL package paths (handles spaces in path correctly)\n",
-    "_krl_base = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP\")\n",
+    "_krl_base = os.path.expanduser(\"~/.krl/krl-suite\")\n",
     "for _pkg in [\"krl-open-core/src\", \"krl-data-connectors/src\"]:\n",
     "    _path = os.path.join(_krl_base, _pkg)\n",
     "    if _path not in sys.path:\n",
@@ -205,7 +205,7 @@
     "\n",
     "# Load environment variables from .env file\n",
     "from dotenv import load_dotenv\n",
-    "_env_path = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP/krl-tutorials/.env\")\n",
+    "_env_path = os.path.expanduser(\"~/.krl/.env\")\n",
     "load_dotenv(_env_path)\n",
     "\n",
     "# Force complete reload of KRL modules to pick up any changes\n",
