--- a/notebooks/applied-econometrics/22-workforce-development-roi.ipynb
+++ b/notebooks/applied-econometrics/22-workforce-development-roi.ipynb
@@ -218,11 +218,11 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "# Load environment variables\n",
-    "_env_path = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP/krl-tutorials/.env\")\n",
+    "_env_path = os.path.expanduser(\"~/.krl/.env\")\n",
     "load_dotenv(_env_path)\n",
     "\n",
     "# Add KRL package paths\n",
-    "_krl_base = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP\")\n",
+    "_krl_base = os.path.expanduser(\"~/.krl/krl-suite\")\n",
     "for _pkg in [\"krl-open-core/src\", \"krl-causal-policy-toolkit/src\", \"krl-data-connectors/src\"]:\n",
     "    _path = os.path.join(_krl_base, _pkg)\n",
     "    if _path not in sys.path:\n",
