--- a/notebooks/causal-inference/11-heterogeneous-treatment-effects.ipynb
+++ b/notebooks/causal-inference/11-heterogeneous-treatment-effects.ipynb
@@ -118,14 +118,14 @@
     "from datetime import datetime\n",
     "\n",
     "# Add KRL package paths\n",
-    "_krl_base = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP\")\n",
+    "_krl_base = os.path.expanduser(\"~/.krl/krl-suite\")\n",
     "for _pkg in [\"krl-open-core/src\", \"krl-data-connectors/src\", \"krl-model-zoo-v2-2.0.0-community\", \"krl-causal-policy-toolkit/src\"]:\n",
     "    _path = os.path.join(_krl_base, _pkg)\n",
     "    if _path not in sys.path:\n",
     "        sys.path.insert(0, _path)\n",
     "\n",
     "from dotenv import load_dotenv\n",
-    "_env_path = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP/krl-tutorials/.env\")\n",
+    "_env_path = os.path.expanduser(\"~/.krl/.env\")\n",
     "load_dotenv(_env_path)\n",
     "\n",
     "import numpy as np\n",
@@ -177,10 +177,10 @@
     "        print(\"   • Subgroup analysis and targeting\")\n",
     "        print(\"\\\\n💡 ACCESS OPTIONS:\")\n",
     "        print(\"   ┌─────────────────────────────────────────────────────────────┐\")\n",
-    "        print(\"   │ 🔹 PROFESSIONAL: $149/mo (annual: $1,428/yr)           │\")\n",
+    "        print(\"   │ 🔹 PROFESSIONAL: $149/mo (annual: $1,428/yr)               │\")\n",
     "        print(\"   │    → https://buy.stripe.com/krl_pro_monthly              │\")\n",
     "        print(\"   │                                                             │\")\n",
-    "        print(\"   │ 🔸 ENTERPRISE: Custom pricing (causal inference suite)      │\")\n",
+    "        print(\"   │ 🔸 ENTERPRISE: Custom pricing (full causal suite)          │\")\n",
     "        print(\"   │    → Contact: enterprise@khipuresearchlabs.com              │\")\n",
     "        print(\"   │                                                             │\")\n",
     "        print(\"   │ ⚡ RENTAL PASSES (Stripe Checkout):                         │\")\n",
