--- a/notebooks/causal-inference/14-synthetic-control-policy-lab.ipynb
+++ b/notebooks/causal-inference/14-synthetic-control-policy-lab.ipynb
@@ -117,11 +117,11 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "# Load environment variables from .env file\n",
-    "env_path = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP/krl-tutorials/.env\")\n",
+    "env_path = os.path.expanduser(\"~/.krl/.env\")\n",
     "load_dotenv(env_path)\n",
     "\n",
     "# Add KRL package paths\n",
-    "_krl_base = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP\")\n",
+    "_krl_base = os.path.expanduser(\"~/.krl/krl-suite\")\n",
     "for _pkg in [\n",
     "    \"krl-open-core/src\", \n",
     "    \"krl-causal-policy-toolkit/src\",\n",
@@ -177,10 +177,10 @@
     "        print(\"   • Pre-treatment fit diagnostics\")\n",
     "        print(\"\\\\n💡 ACCESS OPTIONS:\")\n",
     "        print(\"   ┌─────────────────────────────────────────────────────────────┐\")\n",
-    "        print(\"   │ 🔹 PROFESSIONAL: $149/mo (annual: $1,428/yr)           │\")\n",
+    "        print(\"   │ 🔹 PROFESSIONAL: $149/mo (annual: $1,428/yr)               │\")\n",
     "        print(\"   │    → https://buy.stripe.com/krl_pro_monthly              │\")\n",
     "        print(\"   │                                                             │\")\n",
-    "        print(\"   │ 🔸 ENTERPRISE: Custom pricing (causal inference suite)      │\")\n",
+    "        print(\"   │ 🔸 ENTERPRISE: Custom pricing (full causal suite)          │\")\n",
     "        print(\"   │    → Contact: enterprise@khipuresearchlabs.com              │\")\n",
     "        print(\"   │                                                             │\")\n",
     "        print(\"   │ ⚡ RENTAL PASSES (Stripe Checkout):                         │\")\n",
