--- a/notebooks/causal-inference/15-regression-discontinuity-toolkit.ipynb
+++ b/notebooks/causal-inference/15-regression-discontinuity-toolkit.ipynb
@@ -119,11 +119,11 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "# Load environment variables\n",
-    "_env_path = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP/krl-tutorials/.env\")\n",
+    "_env_path = os.path.expanduser(\"~/.krl/.env\")\n",
     "load_dotenv(_env_path)\n",
     "\n",
     "# Add KRL package paths\n",
-    "_krl_base = os.path.expanduser(\"~/Documents/GitHub/KRL/Private IP\")\n",
+    "_krl_base = os.path.expanduser(\"~/.krl/krl-suite\")\n",
     "for _pkg in [\"krl-open-core/src\", \"krl-causal-policy-toolkit/src\", \"krl-data-connectors/src\"]:\n",
     "    _path = os.path.join(_krl_base, _pkg)\n",
     "    if _path not in sys.path:\n",
@@ -177,7 +177,7 @@
     "        print(\"   • Batch data retrieval\")\n",
     "        print(\"\\\\n💡 ACCESS OPTIONS:\")\n",
     "        print(\"   ┌─────────────────────────────────────────────────────────────┐\")\n",
-    "        print(\"   │ 🔹 PROFESSIONAL: $149/mo (annual: $1,428/yr)           │\")\n",
+    "        print(\"   │ 🔹 PROFESSIONAL: $149/mo (annual: $1,428/yr)               │\")\n",
     "        print(\"   │    → https://buy.stripe.com/krl_pro_monthly              │\")\n",
     "        print(\"   │                                                             │\")\n",
     "        print(\"   │ ⚡ RENTAL PASSES (Stripe Checkout):                         │\")\n",
