fix(notebooks): clean environment setup with pip-first + dev fallback
- Remove duplicate KRL_DEV_PATH definitions (was causing corrupted cells)
- Load .env FIRST before checking KRL_DEV_PATH environment variable
- Support both pip-installed packages (public) and local dev paths (contributors)
- All 6 notebooks use consistent pattern:
  1. Load dotenv from ~/.krl/.env or .env
  2. Check KRL_DEV_PATH env var for development mode
  3. Add package paths to sys.path only in dev mode
  4. Fall back to pip packages for production

Config: ~/.krl/.env with KRL_DEV_PATH=/path/to/Private IP

--- a/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
+++ b/notebooks/applied-econometrics/20-opportunity-zone-evaluation.ipynb
@@ -213,31 +213,65 @@
    ],
    "source": [
     "# =============================================================================\n",
-    "# Opportunity Zone Evaluation: Environment Setup\n",
+    "# KRL Suite: Environment Setup\n",
     "# =============================================================================\n",
+    "\"\"\"\n",
+    "Installation (public users):\n",
+    "    pip install krl-core krl-data-connectors krl-models\n",
     "\n",
+    "Development (contributors):\n",
+    "    export KRL_DEV_PATH=\"/path/to/KRL/Private IP\"\n",
+    "    # Or add to ~/.krl/.env\n",
+    "\"\"\"\n",
     "import os\n",
     "import sys\n",
     "import warnings\n",
     "from datetime import datetime\n",
+    "import importlib\n",
+    "import importlib.util\n",
+    "\n",
+    "# =============================================================================\n",
+    "# Load environment variables FIRST (before checking KRL_DEV_PATH)\n",
+    "# =============================================================================\n",
     "from dotenv import load_dotenv\n",
+    "for _env_file in [os.path.expanduser(\"~/.krl/.env\"), \".env\"]:\n",
+    "    if os.path.exists(_env_file):\n",
+    "        load_dotenv(_env_file)\n",
+    "        break\n",
     "\n",
-    "# Load environment variables\n",
-    "_env_path = os.path.expanduser(\"~/.krl/.env\")\n",
-    "load_dotenv(_env_path)\n",
+    "# =============================================================================\n",
+    "# KRL Suite Path Configuration\n",
+    "# =============================================================================\n",
+    "# Priority: KRL_DEV_PATH env var > pip-installed packages\n",
+    "_KRL_DEV_PATH = os.environ.get(\"KRL_DEV_PATH\")\n",
     "\n",
-    "# Add KRL package paths\n",
-    "# Check for development path (KRL_DEV_PATH env var) or use default\\n",
-    "_KRL_DEV_PATH = os.environ.get('KRL_DEV_PATH')\\n",
-    "if _KRL_DEV_PATH and os.path.isdir(_KRL_DEV_PATH):\\n",
-    "    _krl_base = _KRL_DEV_PATH\\n",
-    "else:\\n",
-    "# Check for development path (KRL_DEV_PATH env var) or use default\\n",
-    "_KRL_DEV_PATH = os.environ.get('KRL_DEV_PATH')\\n",
-    "if _KRL_DEV_PATH and os.path.isdir(_KRL_DEV_PATH):\\n",
-    "    _krl_base = _KRL_DEV_PATH\\n",
-    "else:\\n",
-    "    _krl_base = os.path.expanduser('~/.krl/krl-suite')\\n",
+    "if _KRL_DEV_PATH and os.path.isdir(_KRL_DEV_PATH):\n",
+    "    # Developer mode: use local clones\n",
+    "    _krl_base = _KRL_DEV_PATH\n",
+    "    for _pkg in [\"krl-open-core/src\", \"krl-data-connectors/src\", \"krl-geospatial-tools/src\"]:\n",
+    "        _path = os.path.join(_krl_base, _pkg)\n",
+    "        if os.path.isdir(_path) and _path not in sys.path:\n",
+    "            sys.path.insert(0, _path)\n",
+    "    \n",
+    "    # Add Model Catalog path for krl_models\n",
+    "    _model_catalog_path = os.path.join(_krl_base, \"Model Catalog\")\n",
+    "    if os.path.isdir(_model_catalog_path) and _model_catalog_path not in sys.path:\n",
+    "        sys.path.insert(0, _model_catalog_path)\n",
+    "    \n",
+    "    # Create krl_models module alias pointing to Class A folder\n",
+    "    _class_a_init = os.path.join(_model_catalog_path, \"Class A\", \"__init__.py\")\n",
+    "    if os.path.exists(_class_a_init) and \"krl_models\" not in sys.modules:\n",
+    "        _spec = importlib.util.spec_from_file_location(\"krl_models\", _class_a_init)\n",
+    "        _krl_models = importlib.util.module_from_spec(_spec)\n",
+    "        sys.modules[\"krl_models\"] = _krl_models\n",
+    "        _krl_models.__path__ = [os.path.join(_model_catalog_path, \"Class A\")]\n",
+    "        _spec.loader.exec_module(_krl_models)\n",
+    "    \n",
+    "    _INSTALL_MODE = \"development\"\n",
+    "else:\n",
+    "    # Production mode: pip-installed packages (no path manipulation needed)\n",
+    "    _INSTALL_MODE = \"pip\"\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
