--- a/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
+++ b/notebooks/applied-econometrics/07-labor-market-intelligence.ipynb
@@ -172,8 +172,16 @@
    ],
    "source": [
     "# =============================================================================\n",
-    "# Labor Market Intelligence: Environment Setup\n",
+    "# KRL Suite: Environment Setup\n",
     "# =============================================================================\n",
+    "\"\"\"\n",
+    "Installation (public users):\n",
+    "    pip install krl-core krl-data-connectors krl-models\n",
+    "\n",
+    "Development (contributors):\n",
+    "    export KRL_DEV_PATH=\"/path/to/KRL/Private IP\"\n",
+    "    # Or add to ~/.krl/.env\n",
+    "\"\"\"\n",
     "import os\n",
     "import sys\n",
     "import warnings\n",
@@ -181,26 +189,47 @@
     "import importlib\n",
     "import importlib.util\n",
     "\n",
-    "# Add KRL package paths (handles spaces in path correctly)\n",
-    "# Check for development path (KRL_DEV_PATH env var) or use default\\n",
-    "_KRL_DEV_PATH = os.environ.get('KRL_DEV_PATH')\\n",
-    "if _KRL_DEV_PATH and os.path.isdir(_KRL_DEV_PATH):\\n",
-    "    _krl_base = _KRL_DEV_PATH\\n",
-    "else:\\n",
-    "# Check for development path (KRL_DEV_PATH env var) or use default\\n",
-    "_KRL_DEV_PATH = os.environ.get('KRL_DEV_PATH')\\n",
-    "if _KRL_DEV_PATH and os.path.isdir(_KRL_DEV_PATH):\\n",
-    "    _krl_base = _KRL_DEV_PATH\\n",
-    "else:\\n",
-    "    _krl_base = os.path.expanduser('~/.krl/krl-suite')\\n",
+    "# =============================================================================\n",
+    "# Load environment variables FIRST (before checking KRL_DEV_PATH)\n",
+    "# =============================================================================\n",
     "from dotenv import load_dotenv\n",
-    "_env_path = os.path.expanduser(\"~/.krl/.env\")\n",
-    "load_dotenv(_env_path)\n",
+    "for _env_file in [os.path.expanduser(\"~/.krl/.env\"), \".env\"]:\n",
+    "    if os.path.exists(_env_file):\n",
+    "        load_dotenv(_env_file)\n",
+    "        break\n",
     "\n",
-    "# Force complete reload of KRL modules to pick up any changes\n",
-    "_modules_to_reload = [k for k in sys.modules.keys() if k.startswith(('krl_core', 'krl_data_connectors'))]\n",
-    "for _mod in _modules_to_reload:\n",
-    "    del sys.modules[_mod]\n",
+    "# =============================================================================\n",
+    "# KRL Suite Path Configuration\n",
+    "# =============================================================================\n",
+    "# Priority: KRL_DEV_PATH env var > pip-installed packages\n",
+    "_KRL_DEV_PATH = os.environ.get(\"KRL_DEV_PATH\")\n",
+    "\n",
+    "if _KRL_DEV_PATH and os.path.isdir(_KRL_DEV_PATH):\n",
+    "    # Developer mode: use local clones\n",
+    "    _krl_base = _KRL_DEV_PATH\n",
+    "    for _pkg in [\"krl-open-core/src\", \"krl-data-connectors/src\"]:\n",
+    "        _path = os.path.join(_krl_base, _pkg)\n",
+    "        if os.path.isdir(_path) and _path not in sys.path:\n",
+    "            sys.path.insert(0, _path)\n",
+    "    \n",
+    "    # Add Model Catalog path for krl_models\n",
+    "    _model_catalog_path = os.path.join(_krl_base, \"Model Catalog\")\n",
+    "    if os.path.isdir(_model_catalog_path) and _model_catalog_path not in sys.path:\n",
+    "        sys.path.insert(0, _model_catalog_path)\n",
+    "    \n",
+    "    # Create krl_models module alias pointing to Class A folder\n",
+    "    _class_a_init = os.path.join(_model_catalog_path, \"Class A\", \"__init__.py\")\n",
+    "    if os.path.exists(_class_a_init) and \"krl_models\" not in sys.modules:\n",
+    "        _spec = importlib.util.spec_from_file_location(\"krl_models\", _class_a_init)\n",
+    "        _krl_models = importlib.util.module_from_spec(_spec)\n",
+    "        sys.modules[\"krl_models\"] = _krl_models\n",
+    "        _krl_models.__path__ = [os.path.join(_model_catalog_path, \"Class A\")]\n",
+    "        _spec.loader.exec_module(_krl_models)\n",
+    "    \n",
+    "    _INSTALL_MODE = \"development\"\n",
+    "else:\n",
+    "    # Production mode: pip-installed packages (no path manipulation needed)\n",
+    "    _INSTALL_MODE = \"pip\"\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
